samples/_failures_safe/1761523962_a1cecb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bf12ce7a.c: In function ‘main’:
./samples/SAFE/__tmp_bf12ce7a.c:154:43: error: missing terminating " character
  154 |                     print_matrix(&result, "A
      |                                           ^~
./samples/SAFE/__tmp_bf12ce7a.c:154:21: error: expected expression at end of input
  154 |                     print_matrix(&result, "A
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_bf12ce7a.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bf12ce7a.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bf12ce7a.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bf12ce7a.c:154:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bf12ce7a.c:154:21: error: expected declaration or statement at end of input
